--- a/简历.html
+++ b/简历.html
@@ -13,6 +13,10 @@
 		<title>屏幕页面滚动</title>
 	</head>
      <body>
+     <h1>洛阳师范</h1>
+      <h1>洛阳师范</h1>
+       <h1>洛阳师范</h1>
+        <h1>洛阳师范</h1>
 		<div id="box">
 			<ul>
 				<li class="a">
